--- a/.circleci/config/commands/@caches.yml
+++ b/.circleci/config/commands/@caches.yml
@@ -18,9 +18,9 @@ restore_go_mod_cache_permissive:
     - restore_cache:
         name: Restore closest matching go modules cache
         keys:
-          - &gocachekey v1.9-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
-          -             v1.9-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
-          -             v1.9-{{checksum "go.sum"}}
+          - &gocachekey v1.10-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
+          -             v1.10-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
+          -             v1.10-{{checksum "go.sum"}}
 restore_go_mod_cache:
   steps:
     - restore_cache:
@@ -48,7 +48,7 @@ refresh_go_mod_cache:
           touch deps.json
           for dir in $(find . -name go.mod | xargs -n 1 dirname); do
             pushd $dir;
-            go list ./...
+            go get .
             go mod download all
             go mod download -json >> deps.json
             rm -rf /tmp/vendor
