--- a/.circleci/config/commands/@caches.yml
+++ b/.circleci/config/commands/@caches.yml
@@ -45,16 +45,13 @@ refresh_go_mod_cache:
           # code generation in later builds that rely on this module cache.
           go list ./...
           # try really, really, really hard to download everything
-          touch deps.json
           for dir in $(find . -name go.mod | xargs -n 1 dirname); do
             pushd $dir;
             go get . || true
             go mod download all
-            go mod download -json >> deps.json
-            rm -rf /tmp/vendor
+            go mod download
             popd;
           done
-          jq -c '[.Path,.Version]' deps.json | sort | uniq
     - run:
         name: Verify downloading modules did not modify any files
         command: |
