--- a/.circleci/config/commands/@caches.yml
+++ b/.circleci/config/commands/@caches.yml
@@ -18,9 +18,9 @@ restore_go_mod_cache_permissive:
     - restore_cache:
         name: Restore closest matching go modules cache
         keys:
-          - &gocachekey v1.11-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
-          -             v1.11-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
-          -             v1.11-{{checksum "go.sum"}}
+          - &gocachekey v1.12-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
+          -             v1.12-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
+          -             v1.12-{{checksum "go.sum"}}
 restore_go_mod_cache:
   steps:
     - restore_cache:
@@ -47,13 +47,17 @@ refresh_go_mod_cache:
           # code generation in later builds that rely on this module cache.
           go list ./...
           # try really, really, really hard to download everything
+          deps=$(pwd)/deps.txt
+          rm -rf $deps
+          touch $deps
           for dir in $(find . -name go.mod | xargs -n 1 dirname); do
-            pushd $dir;
-            go get . || true
-            go mod download all
-            go mod download
-            popd;
+            (cd $dir; go mod graph >> $deps);
           done
+          cat $deps | cut -d' ' -f1 > deps1.txt
+          cat $deps | cut -d' ' -f2 > deps2.txt
+          cat deps1.txt deps2.txt | sort | uniq > $deps
+          rm -rf deps1.txt deps2.txt
+          cat $deps | xargs go mod download || true
     - run:
         name: Verify downloading modules did not modify any files
         command: |
