--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -825,7 +825,7 @@ jobs:
     - run:
         command: |
           # set GOPATH explicitly to download to the right cache
-          export GOPATH=/home/circleci/go
+          export GOPATH=$HOME/go
           # go list ./... forces downloading some additional versions of modules that 'go mod
           # download' misses. We need this because we make use of go list itself during
           # code generation in later builds that rely on this module cache.
