--- a/.circleci/config/workflows/ci.yml
+++ b/.circleci/config/workflows/ci.yml
@@ -8,6 +8,11 @@ jobs:
       requires:
         - pre-flight-checks
   - test-ui:
+      filters:
+        branches:
+          only: main
+        tags:
+          only: run-ui-test
       requires:
         - install-ui-dependencies
         - build-go-dev
@@ -39,5 +44,5 @@ jobs:
       requires:
         - pre-flight-checks
   - semgrep:
-       requires:
-         - pre-flight-checks
+      requires:
+        - pre-flight-checks
