--- a/.circleci/config/workflows/ci.yml
+++ b/.circleci/config/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
         - pre-flight-checks
   - test-ui:
       filters:
-        branches:
-          only: main
+        # branches:
+        #   only: main
         tags:
           only: run-ui-test
       requires:
