Ignore CRT builds on docs branches

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: build
 
-on: [ workflow_dispatch, push ]
+on:
+  workflow_dispatch:
+  push:
+    branches-ignore:
+      - docs/**
 
 env:
   PKG_NAME: "vault"
