Only run CI on relevant changesets
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/.circleci/config/jobs/test-go-race.yml
+++ b/.circleci/config/jobs/test-go-race.yml
@@ -3,6 +3,7 @@ parallelism: 8
 steps:
   - exit-if-ui-or-docs-branch
   - checkout
+  - exit-if-only-ui-or-docs-changes
   - go_test:
       extra_flags: "-race"
       log_dir: "/tmp/testlogs"
