--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,21 +33,16 @@ jobs:
     working_directory: /home/circleci/go/src/github.com/hashicorp/vault
     resource_class: xlarge
     steps:
+    - checkout
     - run:
         command: |
-          case "$CIRCLE_BRANCH" in
-          main|ui/*|backport/ui/*|release/*|merge*) ;;
-          *) # If the branch being tested doesn't match one of the above patterns,
-             # we don't need to run test-ui and can abort the job.
-             circleci-agent step halt
-             ;;
-          esac
+          if ! git diff --name-only "{{ pipeline.git.base_revision }}...{{ pipeline.git.revision }}" | grep -q '^ui/'; then
+            circleci-agent step halt
+          fi
 
           # exit with success either way
           exit 0
-        name: Check branch name
-        working_directory: ~/
-    - checkout
+        name: Check for relevant code changes
     - restore_cache:
         key: yarn-lock-v7-{{ checksum "ui/yarn.lock" }}
         name: Restore yarn cache
@@ -87,6 +82,15 @@ jobs:
     resource_class: xlarge
     steps:
     - checkout
+    - run:
+        command: |
+          if ! git diff --name-only "{{ pipeline.git.base_revision }}...{{ pipeline.git.revision }}" | grep -q '^ui/'; then
+            circleci-agent step halt
+          fi
+
+          # exit with success either way
+          exit 0
+        name: Check for relevant code changes
     - restore_cache:
         key: yarn-lock-v7-{{ checksum "ui/yarn.lock" }}
         name: Restore yarn cache
@@ -169,6 +173,22 @@ jobs:
         name: Check branch name
         working_directory: ~/
     - checkout
+    - run:
+        command: |
+          # We filter the list for a negative match against website/ or ui/. If
+          # there's a negative match, that means a non-website, non-ui change
+          # was made, returning 0. By inverting the conditional out front (!),
+          # we negate the return code, meaning we'll skip the CI halt and run
+          # all tests. Otherwise, if the change was limited, the negative match
+          # would return exit code 1, negating that would make the if conditional
+          # truthy and halt Circle CI's Go tests.
+          if ! git diff --name-only "{{ pipeline.git.base_revision }}...{{ pipeline.git.revision }}" | grep --invert-match -q '^\(website\|ui\|changelog\)/'; then
+            circleci-agent step halt
+          fi
+
+          # exit with success either way
+          exit 0
+        name: Check for relevant code changes
     - setup_remote_docker:
         docker_layer_caching: true
         version: 18.09.3
@@ -408,6 +428,22 @@ jobs:
         name: Check branch name
         working_directory: ~/
     - checkout
+    - run:
+        command: |
+          # We filter the list for a negative match against website/ or ui/. If
+          # there's a negative match, that means a non-website, non-ui change
+          # was made, returning 0. By inverting the conditional out front (!),
+          # we negate the return code, meaning we'll skip the CI halt and run
+          # all tests. Otherwise, if the change was limited, the negative match
+          # would return exit code 1, negating that would make the if conditional
+          # truthy and halt Circle CI's Go tests.
+          if ! git diff --name-only "{{ pipeline.git.base_revision }}...{{ pipeline.git.revision }}" | grep --invert-match -q '^\(website\|ui\|changelog\)/'; then
+            circleci-agent step halt
+          fi
+
+          # exit with success either way
+          exit 0
+        name: Check for relevant code changes
     - add_ssh_keys:
         fingerprints:
         - 0e:03:77:f4:e2:c3:56:c2:53:6a:03:e1:31:91:2f:06
@@ -595,6 +631,22 @@ jobs:
         name: Check branch name
         working_directory: ~/
     - checkout
+    - run:
+        command: |
+          # We filter the list for a negative match against website/ or ui/. If
+          # there's a negative match, that means a non-website, non-ui change
+          # was made, returning 0. By inverting the conditional out front (!),
+          # we negate the return code, meaning we'll skip the CI halt and run
+          # all tests. Otherwise, if the change was limited, the negative match
+          # would return exit code 1, negating that would make the if conditional
+          # truthy and halt Circle CI's Go tests.
+          if ! git diff --name-only "{{ pipeline.git.base_revision }}...{{ pipeline.git.revision }}" | grep --invert-match -q '^\(website\|ui\|changelog\)/'; then
+            circleci-agent step halt
+          fi
+
+          # exit with success either way
+          exit 0
+        name: Check for relevant code changes
     - add_ssh_keys:
         fingerprints:
         - 0e:03:77:f4:e2:c3:56:c2:53:6a:03:e1:31:91:2f:06
@@ -898,6 +950,22 @@ jobs:
         name: Check branch name
         working_directory: ~/
     - checkout
+    - run:
+        command: |
+          # We filter the list for a negative match against website/ or ui/. If
+          # there's a negative match, that means a non-website, non-ui change
+          # was made, returning 0. By inverting the conditional out front (!),
+          # we negate the return code, meaning we'll skip the CI halt and run
+          # all tests. Otherwise, if the change was limited, the negative match
+          # would return exit code 1, negating that would make the if conditional
+          # truthy and halt Circle CI's Go tests.
+          if ! git diff --name-only "{{ pipeline.git.base_revision }}...{{ pipeline.git.revision }}" | grep --invert-match -q '^\(website\|ui\|changelog\)/'; then
+            circleci-agent step halt
+          fi
+
+          # exit with success either way
+          exit 0
+        name: Check for relevant code changes
     - setup_remote_docker:
         docker_layer_caching: true
         version: 18.09.3
