--- a/.circleci/config/jobs/test-go-race-remote-docker.yml
+++ b/.circleci/config/jobs/test-go-race-remote-docker.yml
@@ -3,6 +3,7 @@ parallelism: 8
 steps:
   - exit-if-ui-or-docs-branch
   - checkout
+  - exit-if-only-ui-or-docs-changes
   - setup_remote_docker:
       version: 18.09.3
       docker_layer_caching: true
