--- a/.circleci/config/jobs/test-go.yml
+++ b/.circleci/config/jobs/test-go.yml
@@ -3,6 +3,7 @@ parallelism: 8
 steps:
   - exit-if-ui-or-docs-branch
   - checkout
+  - exit-if-only-ui-or-docs-changes
   - go_test:
       log_dir: "/tmp/testlogs"
   - store_artifacts:
