--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,14 @@ jobs:
     - restore_cache:
         key: yarn-lock-v7-{{ checksum "ui/yarn.lock" }}
         name: Restore yarn cache
+    - attach_workspace:
+        at: .
+    - run:
+        command: |
+          # Add ./bin to the PATH so vault binary can be run by Ember tests
+          set -x
+          export PATH="${PWD}/bin:${PATH}"
+        name: export PATH
     - run:
         command: mkdir -p /tmp/test-reports && cd ui && yarn test:oss
         name: Ember tests
