--- a/.circleci/config/jobs/trigger-test-ui.yml
+++ b/.circleci/config/jobs/trigger-test-ui.yml
@@ -3,6 +3,14 @@ resource_class: xlarge
 steps:
   - checkout
   - restore_yarn_cache
+  - attach_workspace:
+      at: .
+  - run:
+      name: export PATH
+      command: |
+        # Add ./bin to the PATH so vault binary can be run by Ember tests
+        set -x
+        export PATH="${PWD}/bin:${PATH}"
   - run:
       name: Ember tests
       command: mkdir -p /tmp/test-reports && cd ui && yarn test:oss
