--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,12 @@ jobs:
           # Add ./bin to the PATH so vault binary can be run by Ember tests
           set -x
           export PATH="${PWD}/bin:${PATH}"
+
+          # Run Ember tests
+          cd ui
+          mkdir -p test-results/qunit
+          yarn test:oss
         name: export PATH
-    - run:
-        command: mkdir -p /tmp/test-reports && cd ui && yarn test:oss
-        name: Ember tests
     - store_test_results:
         path: /tmp/test-reports
     - store_artifacts:
