--- a/.circleci/config/jobs/trigger-test-ui.yml
+++ b/.circleci/config/jobs/trigger-test-ui.yml
@@ -11,9 +11,11 @@ steps:
         # Add ./bin to the PATH so vault binary can be run by Ember tests
         set -x
         export PATH="${PWD}/bin:${PATH}"
-  - run:
-      name: Ember tests
-      command: mkdir -p /tmp/test-reports && cd ui && yarn test:oss
+
+        # Run Ember tests
+        cd ui
+        mkdir -p test-results/qunit
+        yarn test:oss
   - store_test_results:
       path: /tmp/test-reports
   - store_artifacts:
